test/visibility/relative-use/use-relative-error1.good
use-relative-error1.chpl:5: error: use must name a module or enum ('x' is neither)
